--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Template"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "mike==2.1.3",
     "mkdocs==1.6.1",
     "mkdocs-material==9.5.49",
 ]
