--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,13 @@ click==8.1.8
 colorama==0.4.6
 ghp-import==2.1.0
 idna==3.10
+importlib-metadata==8.5.0
+importlib-resources==6.4.5
 jinja2==3.1.5
 markdown==3.7
 markupsafe==3.0.2
 mergedeep==1.3.4
+mike==2.1.3
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.5.49
@@ -21,6 +24,7 @@ pathspec==0.12.1
 platformdirs==4.3.6
 pygments==2.18.0
 pymdown-extensions==10.12
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pyyaml==6.0.2
 pyyaml-env-tag==0.1
@@ -28,4 +32,6 @@ regex==2024.11.6
 requests==2.32.3
 six==1.17.0
 urllib3==2.2.3
+verspec==0.1.0
 watchdog==6.0.0
+zipp==3.21.0
